--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,13 +11,13 @@
     @apply flex flex-col min-h-screen;
   }
   header {
-    @apply fixed z-10 w-full px-6 py-4 bg-rose-500;
+    @apply fixed z-10 w-full py-3 bg-rose-500;
   }
   nav {
     @apply flex items-center justify-between gap-6 px-6 mx-auto max-w-7xl;
   }
   main {
-    @apply flex flex-col flex-auto gap-4 mx-auto max-w-7xl;
+    @apply flex flex-col items-stretch flex-1 w-full gap-6;
   }
   aside {
     @apply hidden;
@@ -29,13 +29,13 @@
     @apply flex flex-col gap-4;
   }
   article {
-    @apply flex flex-col gap-4 p-6 bg-white md:rounded-xl dark:bg-gray-800;
+    @apply flex flex-col gap-4 p-6 bg-white md:rounded-lg dark:bg-gray-800;
   }
   form {
-    @apply flex flex-col gap-4 p-6 bg-white md:rounded-xl dark:bg-gray-800;
+    @apply flex flex-col gap-4 p-6 bg-white md:rounded-lg dark:bg-gray-800;
   }
   dl {
-    @apply flex flex-col px-5 pt-5 pb-2 bg-white md:rounded-xl dark:bg-gray-800;
+    @apply flex flex-col gap-6 p-6 bg-white md:rounded-lg dark:bg-gray-800;
   }
 
   /* Text */
@@ -46,32 +46,32 @@
     @apply text-2xl font-bold font-display text-rose-600;
   }
   h3 {
-    @apply text-xl font-medium text-gray-800 dark:text-gray-100;
+    @apply text-xl font-medium text-gray-700 dark:text-gray-200;
   }
   h4 {
-    @apply text-lg font-medium text-gray-800 dark:text-gray-100;
+    @apply text-lg font-medium text-gray-700 dark:text-gray-200;
   }
   h5 {
-    @apply font-medium text-gray-800 dark:text-gray-100;
+    @apply font-medium text-gray-700 dark:text-gray-200;
   }
   h6 {
-    @apply text-sm font-medium text-gray-800 dark:text-gray-100;
+    @apply text-sm font-medium text-gray-700 dark:text-gray-200;
   }
   p {
-    @apply flex items-center gap-2 text-sm text-gray-800 dark:text-gray-100;
+    @apply flex items-center gap-2 text-sm text-gray-700 dark:text-gray-200;
   }
 
   /* Links */
-  a {
-    @apply flex items-center gap-2 text-sm font-medium text-gray-800 transition hover:-translate-y-px hover:text-gray-900 dark:hover:text-white dark:text-gray-100 active:translate-y-px;
-  }
+  /*  a {
+    @apply flex items-center gap-2 font-medium text-gray-700 transition-colors hover:text-gray-800 dark:hover:text-gray-100 dark:text-gray-200;
+  } */
   button {
-    @apply flex items-center justify-center gap-2 px-4 py-2 text-sm font-medium text-white transition border rounded-full hover:-translate-y-px hover:bg-rose-700 active:translate-y-px bg-rose-600 border-rose-600 hover:border-rose-700 disabled:pointer-events-none disabled:opacity-75;
+    @apply flex items-center justify-center gap-2 px-4 py-2 font-medium text-white transition border rounded-full hover:-translate-y-px hover:bg-rose-700 active:translate-y-px bg-rose-600 border-rose-600 hover:border-rose-700 disabled:pointer-events-none disabled:opacity-75;
   }
 
   /* Forms */
   label {
-    @apply text-sm font-medium text-gray-800 dark:text-gray-100;
+    @apply font-medium text-gray-700 dark:text-gray-200;
   }
   /* input:-webkit-autofill {
     @apply bg-white dark:bg-gray-700;
@@ -80,38 +80,38 @@
     @apply bg-white dark:bg-gray-700;
   }
   input {
-    @apply w-full px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border rounded-md dark:focus:border-rose-600 focus:border-rose-600 dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
+    @apply w-full px-3 py-2 text-gray-700 placeholder-gray-500 transition bg-gray-100 border rounded-md dark:focus:border-rose-600 focus:border-rose-600 dark:bg-gray-700 dark:text-gray-200 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
   }
   input[type='password'] {
-    @apply w-full px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border rounded-md dark:focus:border-rose-600 focus:border-rose-600 focus:outline-none dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:ring-1 focus:ring-rose-600;
+    @apply w-full px-3 py-2 text-gray-700 placeholder-gray-500 transition bg-gray-100 border rounded-md dark:focus:border-rose-600 focus:border-rose-600 focus:outline-none dark:bg-gray-700 dark:text-gray-200 dark:border-gray-600 dark:placeholder-gray-400 focus:ring-1 focus:ring-rose-600;
   }
   input[type='checkbox'] {
-    @apply p-2 text-sm transition bg-gray-100 border rounded dark:bg-gray-700 text-rose-600 dark:border-gray-600 focus:ring-transparent focus:outline-none focus:ring-offset-0;
+    @apply p-2 transition bg-gray-100 border rounded dark:bg-gray-700 text-rose-600 dark:border-gray-600 focus:ring-transparent focus:outline-none focus:ring-offset-0;
   }
   textarea {
-    @apply w-full h-24 px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border rounded-md resize-none dark:focus:border-rose-600 focus:border-rose-600 dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
+    @apply w-full h-24 px-3 py-2 text-gray-700 placeholder-gray-500 transition bg-gray-100 border rounded-md resize-none dark:focus:border-rose-600 focus:border-rose-600 dark:bg-gray-700 dark:text-gray-200 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
   }
   select {
-    @apply w-full px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border rounded-md dark:focus:border-rose-600 focus:border-rose-600 dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
+    @apply w-full px-3 py-2 text-gray-700 placeholder-gray-500 transition bg-gray-100 border rounded-md dark:focus:border-rose-600 focus:border-rose-600 dark:bg-gray-700 dark:text-gray-200 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
   } */
   /* Icons  */
   svg {
-    @apply w-5 h-5 text-gray-500 dark:text-gray-400;
+    @apply w-5 h-5;
   }
 }
 
 @layer components {
   .nav {
-    @apply px-5 py-3 rounded-lg;
+    @apply flex items-center gap-2 px-5 py-3 text-sm font-medium;
   }
   .nav-active {
-    @apply text-gray-800 bg-white border hover:text-gray-900 dark:text-gray-100 dark:hover:text-white dark:bg-gray-800;
+    @apply text-sm text-gray-700 transition-colors bg-white rounded-lg hover:text-gray-800 dark:text-gray-200 dark:hover:text-gray-100 dark:bg-gray-800;
   }
   .nav-inactive {
-    @apply text-gray-700 hover:text-gray-800 dark:hover:text-gray-100 dark:text-gray-200;
+    @apply text-sm text-gray-600 transition-colors hover:text-gray-700 dark:hover:text-gray-200 dark:text-gray-300;
   }
   .badge {
-    @apply px-3 py-1 text-sm font-medium rounded-full bg-rose-100 text-rose-600 dark:bg-rose-600 dark:text-rose-100;
+    @apply px-3 py-1 font-medium rounded-full bg-rose-100 text-rose-600 dark:bg-rose-600 dark:text-rose-100;
   }
   .divide {
     @apply divide-y divide-gray-200 dark:divide-gray-700;
@@ -120,16 +120,16 @@
     @apply bg-white dark:bg-gray-800 hover:bg-white dark:hover:bg-gray-800 hover:text-rose-700 text-rose-600;
   }
   .button-upload {
-    @apply flex items-center justify-center gap-1 px-4 py-2 text-gray-800 transition bg-white rounded-full hover:text-gray-900 dark:text-gray-100 dark:hover:text-white hover:bg-gray-100 bordered clickable-float dark:bg-gray-800 dark:hover:bg-gray-900;
+    @apply flex items-center justify-center gap-1 px-4 py-2 text-gray-700 transition bg-white rounded-full hover:text-gray-900 dark:text-gray-200 dark:hover:text-white hover:bg-gray-100 bordered clickable-float dark:bg-gray-800 dark:hover:bg-gray-900;
   }
   .button-secondary {
     @apply border-none bg-rose-200 dark:bg-rose-200 hover:bg-rose-300 dark:hover:bg-rose-300 text-rose-600 dark:text-rose-600 dark:border-none;
   }
   .icon-upload {
-    @apply text-gray-800 hover:text-gray-900 dark:text-gray-100 dark:hover:text-white;
+    @apply text-gray-700 hover:text-gray-900 dark:text-gray-200 dark:hover:text-white;
   }
   .link-primary {
-    @apply flex items-center gap-2 text-sm font-medium transition text-rose-600 hover:-translate-y-px hover:text-rose-700 active:translate-y-px;
+    @apply flex items-center gap-2 font-medium transition text-rose-600 hover:-translate-y-px hover:text-rose-700 active:translate-y-px;
   }
   .clickable-float {
     @apply transition-transform cursor-pointer hover:-translate-y-px active:translate-y-px;
