--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,10 +8,10 @@
     @apply bg-gray-100 dark:bg-gray-900;
   }
   #__next {
-    @apply flex flex-col min-h-screen;
+    @apply min-h-screen;
   }
   header {
-    @apply fixed z-10 w-full py-3 bg-rose-500;
+    @apply fixed z-10 w-full py-4 bg-white dark:bg-gray-800;
   }
   nav {
     @apply flex items-center justify-between gap-6 px-6 mx-auto max-w-7xl;
@@ -29,13 +29,13 @@
     @apply flex flex-col gap-4;
   }
   article {
-    @apply flex flex-col gap-4 p-6 bg-white md:rounded-lg dark:bg-gray-800;
+    @apply flex flex-col gap-4 p-6 bg-white sm:rounded-lg dark:bg-gray-800;
   }
-  form {
+  /* form {
     @apply flex flex-col gap-4 p-6 bg-white md:rounded-lg dark:bg-gray-800;
-  }
+  } */
   dl {
-    @apply flex flex-col gap-6 p-6 bg-white md:rounded-lg dark:bg-gray-800;
+    @apply flex flex-col gap-4 p-6 bg-white md:rounded-lg dark:bg-gray-800;
   }
 
   /* Text */
@@ -65,9 +65,9 @@
   /*  a {
     @apply flex items-center gap-2 font-medium text-gray-700 transition-colors hover:text-gray-800 dark:hover:text-gray-100 dark:text-gray-200;
   } */
-  button {
+  /* button {
     @apply flex items-center justify-center gap-2 px-4 py-2 font-medium text-white transition border rounded-full hover:-translate-y-px hover:bg-rose-700 active:translate-y-px bg-rose-600 border-rose-600 hover:border-rose-700 disabled:pointer-events-none disabled:opacity-75;
-  }
+  } */
 
   /* Forms */
   label {
@@ -130,6 +130,9 @@
   }
   .link-primary {
     @apply flex items-center gap-2 font-medium transition text-rose-600 hover:-translate-y-px hover:text-rose-700 active:translate-y-px;
+  }
+  .clickable {
+    @apply text-gray-500 cursor-pointer dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-300;
   }
   .clickable-float {
     @apply transition-transform cursor-pointer hover:-translate-y-px active:translate-y-px;
